--- a/app/src/main/res/layout/activity_save_test.xml
+++ b/app/src/main/res/layout/activity_save_test.xml
@@ -5,9 +5,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
    <Button
-       android:id="@+id/second_activity"
+       android:id="@+id/third_activity"
        android:layout_width="match_parent"
        android:layout_height="50dp"
-       android:text="startService"/>
+       android:text="third"/>
+   <EditText
+       android:id="@+id/edit"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:text="sjgsjkg"/>
 
 </LinearLayout>
