--- a/app/src/main/res/layout/fragment_test.xml
+++ b/app/src/main/res/layout/fragment_test.xml
@@ -3,11 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#892378">
    <Button
-       android:id="@+id/third_activity"
+       android:id="@+id/fragment_test"
        android:layout_width="match_parent"
        android:layout_height="50dp"
-       android:text="startService"/>
+       android:text="测试fragment"/>
 
 </LinearLayout>
