--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -15,7 +15,17 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:text="stopService"/>
+    <Button
+        android:id="@+id/start_intentservice"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="startIntentService"/>
 
+    <Button
+        android:id="@+id/stop_intentservice"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="stopIntentService"/>
     <Button
         android:id="@+id/next"
         android:layout_width="match_parent"
