--- a/app/src/main/res/layout/activity_fragment_test.xml
+++ b/app/src/main/res/layout/activity_fragment_test.xml
@@ -4,6 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+   <com.test.demos.demos.MyTextview
+       android:layout_width="match_parent"
+       android:layout_height="50dp"
+       android:text="司空见惯思考更健康"/>
    <Button
        android:id="@+id/fragment_test_activity"
        android:layout_width="match_parent"
