--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
+   <com.test.demos.demos.MyTextview
+       android:layout_width="match_parent"
+       android:layout_height="50dp"
+       android:text="的款式更健康"
+       android:foregroundGravity="center"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+   <com.test.demos.demos.MyTextview
+       android:layout_width="match_parent"
+       android:layout_height="50dp"
+       android:text="222尚德机构"
+       android:foregroundGravity="center"/>
 
-</android.support.constraint.ConstraintLayout>
+   <Button
+       android:id="@+id/btn"
+       android:layout_width="match_parent"
+       android:layout_height="50dp"
+       android:text="buttton"
+       android:foregroundGravity="center"/>
+
+</LinearLayout>
