--- a/app/src/main/res/layout/activity_listview.xml
+++ b/app/src/main/res/layout/activity_listview.xml
@@ -7,6 +7,7 @@
     <android.support.design.widget.TabLayout
         android:id="@+id/tablayout"
         android:layout_width="match_parent"
+        android:visibility="gone"
         app:tabIndicatorHeight="0dp"
         android:layout_height="50dp"/>
 
